[package]
name = "phasstphase"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
hashbrown = "0.1"
rayon = "*"
threadpool = "*"
rand = "*"
bio = ">=0.29"
rust-htslib = ">=0.36"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
failure = "0.1.5"
statrs = "*"
petgraph = "*"
sanitize-filename = "*"
log = "*"
env_logger = "*"